numbat/tests/snapshots/prelude_and_examples__parse_error_snapshots@expected_comma_or_right_angle_bracket.nbt.snap
---
source: numbat/tests/prelude_and_examples.rs
expression: output
input_file: examples/parse_error/expected_comma_or_right_angle_bracket.nbt
---
error: while parsing
  ┌─ <internal:3>:1:8
  │
1 │ fn f<T 2>() = 1
  │        ^ Expected ',' or '>' in type parameter list
