numbat/tests/snapshots/prelude_and_examples__parse_error_snapshots@expected_digit_in_base.nbt.snap
---
source: numbat/tests/prelude_and_examples.rs
expression: output
input_file: examples/parse_error/expected_digit_in_base.nbt
---
error: while parsing
  ┌─ <internal:3>:1:4
  │
1 │ 0x1Z
  │    ^ Expected base-16 digit
